# A-tempo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/A_tempo/: cli.py
tests/: conftest.py  test_tempo.py
